<resources>
    <string name="app_name">Tronline Driver</string>
    <string name="welcom_btn">Get Started</string>
    <string name="app_title">Nikola\nDriver</string>
    <string name="toolbar_title">Nikola Driver</string>
    <string name="login_email">Email Id</string>
    <string name="login_Password">Password</string>
    <string name="login_btn">Sign In</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_reject">Reject</string>
    <string name="login_errror">You have logged in other device!</string>
    <string name="txt_respod">Responding...</string>
    <string name="forgot_pass_btn">Forgot Password?</string>
    <string name="new_user_btn">New User?</string>
    <string name="req_pass_btn">Request Password</string>
    <string name="register_btn">Register</string>
    <string name="forgot_txt_note">Please Enter Email Id to Receive Password</string>
    <string name="first_name">First Name</string>
    <string name="last_Name">Last Name</string>
    <string name="your_password">Your Password</string>
    <string name="your_email">Your Email</string>
    <string name="phn_no">Phone Number</string>
    <string name="txt_select_country">Select Country</string>
    <string name="txt_select_currency">Select Currency</string>
    <string name="login_cancelled">login cancelled</string>
    <string name="login_failed">login failed</string>
    <string name="btn_edit">EDIT</string>
    <string name="btn_save">SAVE</string>
    <string name="txt_current_loc">Current Location</string>
    <string name="txt_drop_loc">Drop Location</string>
    <string name="txt_types_title">Available Cars</string>
    <string name="txt_types_payment">Cash</string>
    <string name="invoice">INVOICE</string>
    <string name="total_fare">TOTAL FARE</string>
    <string name="trip_summary">TRIP SUMMARY</string>
    <string name="rate_ride">Rate the Customer</string>

    <string name="txt_male">male</string>
    <string name="txt_female">female</string>

    <string name="txt_mobile_error">Please Enter Mobile number!</string>
    <string name="txt_fname_error">Please Enter First name!</string>
    <string name="txt_lname_error">Please Enter Last name!</string>
    <string name="txt_incorrect_error">Incorrect Email id!</string>
    <string name="txt_picture_error">Please choose profile picture!</string>
    <string name="txt_phone_error">Please Enter phone number!</string>
    <string name="txt_pass8_error">Password must be at least 8 character!</string>

    <string name="txt_email_error">Please Enter Email ID!</string>
    <string name="txt_pass_error">Please Enter Password!</string>
    <string name="txt_load">Loading...</string>
    <string name="txt_confirm">Confirming...</string>
    <string name="txt_signin">Signing in...</string>
    <string name="reg_load">Registering...</string>
    <string name="updating_pro_load">Updating profile...</string>
    <string name="req_pass_load">Requesting Password...</string>
    <string name="change_availability">Change Status</string>
    <string name="setting">Ready to drive?</string>
    <string name="doc">Upload your documents</string>
    <string name="help_line">In Case of Emergency</string>

    <string name="my_home">Home</string>
    <string name="my_payment">Add Payment</string>
    <string name="my_free_ride">Free Rides</string>
    <string name="ride_history">Ride History</string>
    <string name="my_promo">Promos</string>
    <string name="my_help">Help</string>
    <string name="txt_logout">Logout</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="txt_yes">Yes</string>

    <string name="txt_no">No</string>
    <string name="logout_text">Are you sure you want to SignOut?</string>

    <string name="update_success_text">Profile Updated Successfully</string>



    <string-array name="currency">
        <item>USD</item>
        <item>INR</item>
    </string-array>

    <string name="facebook_api_id">1728426610810179</string>
    <string name="sender_id">942850374226</string>
    <string name="google_app_id">942850374226</string>
    <string name="map_key">AIzaSyDoujGbr86VY2F6vhh-bzZjsebCFoRn0ik</string>

    <string name="txt_slct_option">Choose Picture</string>
    <string name="txt_gellery">Gallery</string>
    <string name="txt_cameray">Camera</string>
    <string name="txt_img_error">unable to select image!</string>
    <string name="txt_current_location">\u25A0  Where to go?</string>

    <string name="txt_symbol_dot">\u25CF</string>
    <string name="txt_symbol_square">\u25A0</string>
    <string name="txt_dest_hint">Where to go?</string>

    <string name="txt_req_cab">Request Taxi</string>

    <string name="txt_success_forgot_password">Password Sent successfully to Registered Mail Id! </string>

    <string name="status_1">Doctor Accepted</string>
    <string name="status_2">Doctor Departed</string>
    <string name="status_3">Doctor Arrived</string>
    <string name="status_4">Start Treatment</string>
    <string name="status_5">End Treatment</string>


    <string name="history_title">Ride History</string>
    <string name="txt_warning">( Disabled to avoid Vandalism of Demo )</string>

    <string name="btn_status_txt_1">Tap when Departed</string>
    <string name="btn_status_txt_2">Arrived at Customers Place</string>
    <string name="btn_status_txt_3">Tap to Start Trip</string>
    <string name="btn_status_txt_4">Tap to End Trip</string>
    <string name="txt_pickup_address">PickUp Address</string>
    <string name="give_rating">Please give rating to user</string>
    <string name="rated_successfully">User rated successfully</string>
    <string name="drop_address">DROP ADDRESS</string>
    <string name="txt_drop_address">Drop Address</string>
    <string name="dialog_exit_text">Are you sure ?</string>
    <string name="dialog_exit_caps">EXIT</string>

    <string name="txt_gps_off">GPS is Off!</string>
    <string name="txt_gps_msg">Please Turn On GPS</string>
    <string name="txt_enable">Enable</string>
    <string name="txt_exit">Exit</string>

    <string name="dialog_no_internet">No Internet</string>
    <string name="no_internet">Internet not available</string>
    <string name="dialog_no_inter_message">You have not active internet connection.</string>
    <string name="dialog_enable_3g">Enable 3G</string>
    <string name="dialog_enable_wifi">Enable WIFI</string>
    <string name="dialog_exit">Exit</string>
    <string name="txt_note_choose">This feature is <b>Disabled</b> in <b>DEMO</b>, to avoid Vandalism of the Demo</string>

    <string name="note_availbility">Use the button present above to toggle between "Available" &amp; "Not available ie. If you wish to take a break, you can turn-off your availability.</string>
    <string name="doc_title">Upload your documents</string>
    <string name="txt_no_history">--- No Ride History Available ---</string>
    <string name="txt_availabilty">Am available now / Not driving now</string>
    <string name="txt_avaialble_note1">What is this?</string>
    <string name="txt_driver">Driver</string>
    <string name="title_messenger">Messenger</string>
    <string name="txt_type_msg">Type your message</string>
    <string name="pic_worn">You can choose the picture from Gallery -or- Use Camera to create one.</string>
    <string name="txt_note">Note: </string>
    <string name="txt_ok">Ok</string>
    <string name="txt_payment_type">Payment Type:</string>
    <string name="txt_no_tolls">No. Tolls:</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_not_avialbel">-- Not Available --</string>
    <string name="txt_your_tripwith">your trip with </string>
    <string name="txt_receipt">Receipt</string>
    <string name="base_fare">Base fare</string>
    <string name="min_fare">Min. fare</string>
    <string name="time_cost">Time cost</string>
    <string name="distance">Distance</string>
    <string name="booking_price">Booking price</string>
    <string name="service_tax">Service tax</string>
    <string name="total">Total</string>
    <string name="txt_time">Time</string>
    <string name="txt_dis">Distance</string>
    <string name="sign_in">Sign In</string>
    <string name="title_logout">Logout</string>
    <string name="txt_contact">Contact</string>
    <string name="txt_direction">Direction</string>
    <string name="txt_cancel_ride">Cancel ride</string>
    <string name="txt_error_enter_msg">Please Enter Message before send</string>
    <string name="txt_load_web">Are you sure? You want to load this page?</string>
    <string name="txt_continue">Continue</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_car_type">Car type</string>
    <string name="txt_name">Name:</string>
    <string name="txt_pic_address">Pickup Address:</string>
    <string name="txt_no_hours">No. Hours:</string>
    <string name="txt_upload_fail">Failed to upload file!</string>
    <string name="txt_total_no_tolls">Total Toll Gates in your route:</string>
    <string name="txt_error_payment_confirm">Please wait till User to Confirm Payment!</string>
    <string name="txt_ride_total">Your Ride Total is</string>
    <string name="btn_confirm">Confirm</string>
    <string name="txt_confirm_cash">Cash received successfully</string>
    <string name="txt_trip_progress">Trip is in Progress!</string>
    <string name="cancel_txt">Are you sure? You want to Cancel this Ride</string>
    <string name="txt_contact_user">Contact User</string>
    <string name="txt_call">Call</string>
    <string name="txt_msg">Message</string>
    <string name="txt_mobile">Mobile:</string>
    <string name="txt_cancel_msg_user">Trip Cancelled by User!</string>
    <string name="txt_allow_permission">You need to allow permission</string>
    <string name="txt_network_not_available">No network connection.Please check your internet</string>
    <string name="txt_out_of_memory">Run out of memory please colse the other background apps and try again!</string>

    <string-array name="language">
        <item>Select Language</item>
        <item>English(en)</item>
        <item>French(fr)</item>
    </string-array>

    <string name="select_vehicle">Select Vehicle type</string>
    <string name="error_select_taxi">Please select taxi type</string>
    <string name="upload_vehicle_image">Upload vehicle picture</string>
    <string name="your_vehicle_model">Vehicle model</string>
    <string name="your_vehicle_colour">vehicle colour</string>
    <string name="your_vehicle_number">Vehicle number</string>
    <string name="txt__vehicle_picture_error">Please upload image of your vehicle</string>
    <string name="txt_plate_error">Please enter vehicle number</string>
    <string name="txt_colour_error">Please enter vehicle colour</string>
    <string name="txt_model_error">Please enter vehicle model</string>
    <string name="logout_txt">Logging out...</string>

    <string name="update_txt">Please Update and get the Latest Version.</string>
    <string name="update_txt_btn">Update</string>
    <string name="update_txt_available">An Update Available</string>
    <string name="txt_stop_added_user">Stop Added</string>
    <string name="txt_dest_change_user">Destination Changed</string>
</resources>
