<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_status_availability"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tronline.driver.activity.StatusAvailabilityActivity">

    <RelativeLayout
        android:id="@+id/actionbar_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/tb_status"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@drawable/background_with_shadow">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/setting_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:padding="6dp"
                    app:srcCompat="@drawable/back" />

                <com.tronline.driver.customText.CustomBoldRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:gravity="end"
                    android:paddingRight="10dp"
                    android:text="@string/change_availability"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/switch_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">

        <com.tronline.driver.customText.CustomRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_availabilty"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_availability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            app:theme="@style/Color1SwitchStyle" />


    </RelativeLayout>

    <com.tronline.driver.customText.CustomRegularTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/txt_avaialble_note1"
        android:textColor="@color/deep_grey"
        android:textSize="20sp" />

    <com.tronline.driver.customText.CustomBoldRegularTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/note_availbility"
        android:textColor="@color/deep_grey"
        android:textSize="15sp" />

</LinearLayout>
