<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar_search_place"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@drawable/background_with_shadow">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/search_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                app:srcCompat="@drawable/back" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_search_place"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_symbol_dot"
                android:textColor="#7aa7ef"
                android:textSize="25dp" />

            <View
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="8dp"
                android:layout_marginTop="10dp"
                android:background="@color/black"
                android:text="@string/txt_symbol_square" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/et_source_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/source_edit_back"
                android:hint="@string/txt_current_loc"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="#7aa7ef"
                android:textSize="14sp" />

            <AutoCompleteTextView
                android:id="@+id/et_destination_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/destination_edit_back"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:padding="10dp"
                android:hint="@string/txt_dest_hint"
                android:singleLine="true"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>