<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <FrameLayout
        android:id="@+id/frame_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/log_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="70dp"
            android:visibility="gone" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_userid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="150dp">

            <com.tronline.driver.customText.CustomRegularEditView
                android:id="@+id/et_login_userid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/circle_color"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_userid"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:passwordToggleDrawable="@mipmap/eye"
            app:passwordToggleEnabled="true">

            <com.tronline.driver.customText.CustomRegularEditView
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:backgroundTint="@color/circle_color"
                android:hint="@string/login_Password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>

        <com.tronline.driver.customText.CustomRegularSemiboldTextView
            android:id="@+id/btn_new_driver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_pass"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:text="@string/new_user_btn"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/circle_color">


            <com.tronline.driver.customText.CustomRegularTextView
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:gravity="center"
                android:text="@string/login_btn"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />


            <com.tronline.driver.customText.CustomRegularTextView
                android:id="@+id/btn_forgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/forgot_pass_btn"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true">

            <ImageButton
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:padding="10dp"
                android:tint="@android:color/black"
                app:srcCompat="@drawable/close" />

            <com.tronline.driver.customText.CustomRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@+id/btn_cancel"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </RelativeLayout>


    </RelativeLayout>
</RelativeLayout>