<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:id="@+id/request_layout"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.tronline.driver.customText.CustomBoldRegularTextView
            android:id="@+id/tv_available_taxi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_types_title"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/lst_vehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_available_taxi"
            android:layout_marginTop="10dp"
            android:layout_centerInParent="true"
            android:orientation="horizontal"></android.support.v7.widget.RecyclerView>
        <View
            android:id="@+id/v_"
            android:layout_width="wrap_content"
            android:layout_height="0.01dp"
            android:layout_below="@+id/lst_vehicle"
            android:layout_margin="5dp"
            android:background="@color/dark_grey" />

        <LinearLayout
            android:id="@+id/lay_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/v_"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:orientation="horizontal">

        <ImageView
            android:id="@+id/im_payment_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:srcCompat="@drawable/ic_notes"/>

            <com.tronline.driver.customText.CustomBoldRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_types_payment"
                android:textSize="18sp"
                android:layout_marginLeft="8dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:id="@+id/tv_cashtype"/>
        </LinearLayout>

        <com.tronline.driver.customText.CustomRegularTextView
            android:id="@+id/btn_request_cab"
            android:layout_width="270dp"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/lay_payment"
            android:background="@drawable/rounded_button_welcome"
            android:gravity="center"
            android:shadowDy="0"
            android:text="@string/txt_req_cab"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </RelativeLayout>

</RelativeLayout>